--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 .jumbotron{
-  background-color:  #8f4848;
+  background-color:  #9d9d9d;
   color: white;
   font-size: 50px;
   font-weight: bold;
@@ -15,11 +15,11 @@ div.container{
 }
 
 #searchpar {
-  background-color: #8f4848;
+  background-color: #9d9d9d;
   color: white;
   size: 18px;
   font-weight: bold
-  border-color: #8f4848;
+  border-color: #9d9d9d;
   border-width: 2px;
 }
 
